--- a/TODOlists.codawebscriptsidebar/index.html
+++ b/TODOlists.codawebscriptsidebar/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<title>TODOLists - Coda 2 Sidebar Plugin v.1.1 | © D.G. Midwinter, @duncanmid</title>
+		<title>TODOLists - Coda 2 Sidebar Plugin v.1.2 | © D.G. Midwinter, @duncanmid</title>
 		<link id="stylesheet" rel="stylesheet" href="styles-0.css" />
 		<script src="jquery-3.1.0.min.js"></script>
 		<script src="scripts.js"></script>
@@ -52,7 +52,7 @@
 				</div>
 				<div class="additional-options">
 				</div>
-				<button type="button" id="sample">help</button> <button type="button" id="twitter">@duncanmid</button>
+				<button type="button" id="sample">help</button> <button type="button" id="mastodon">@duncanmid</button>
 			</div>
 		</footer>
 	</body>
